2009-02-17  Daniel Elstner  <danielk@openismus.com>

	* autogen.sh: Add minimal variant of this common shell script
	which simply runs autoreconf and then configure.

2009-01-07  Daniel Elstner  <danielk@openismus.com>

	* docs/tutorial/README: Document "make html".

2009-01-07  Daniel Elstner  <danielk@openismus.com>

	* examples/full_example/main.cc (Example::on_texture_button_press):
	Fix typo.

2009-01-07  Daniel Elstner  <danielk@openismus.com>

	* examples/full_example/main.cc (Example::rotate_item_to_front):
	Disable a piece of code that calculates a value which is not used.

2009-01-07  Daniel Elstner  <danielk@openismus.com>

	* examples/full_example/main.cc (Example::Example): Simplify
	expression.

2009-01-07  Daniel Elstner  <danielk@openismus.com>

	* examples/behaviour/main.cc (main): Correct a method name mentioned
	in a comment.

2009-01-07  Daniel Elstner  <danielk@openismus.com>

	* Makefile.am: Minor cleanup.
	(post-html): Prefix the examples directory with $(srcdir) because
	the sources do not live in the build tree in a VPATH setup.  Also
	make use of the -C option of rsync to omit build garbage from the
	upload.

2009-01-06  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/cluttermm-tut.xml: Introduction: cluttermm: Correct a 
	typo and mention that exceptions are optional (at glibmm configure time) 
	for embedded developers who are scared of them.

2009-01-06  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/cluttermm-tut.xml: Correct the base URLs for the 
	(not ideal) reference documentation for cluttermm and clutter-gtkmm.
	* examples/full_example/main.cc: Replaced some g_print()s with 
	std::cout.

2009-01-06  Murray Cumming  <murrayc@murrayc.com>

	* examples/: Mostly whitespace changes to be more like the gtkmm 
	examples.

2009-01-06  Murray Cumming  <murrayc@murrayc.com>

	* COPYING:
	* INSTALL: Added these to svn.
	* Makefile.am: Correct the upload, which must be a little more complex 