@@ -40,8 +40,8 @@ int main(int argc, char** argv)
   rect->set_rotation(Clutter::X_AXIS, -20, 0, 0, 0);
 
   // Add a label to the stage:
-  const Glib::RefPtr<Clutter::Label> label =
-      Clutter::Label::create("Sans 12", "Some Text", actor_color);
+  const Glib::RefPtr<Clutter::Text> label =
+      Clutter::Text::create("Sans 12", "Some Text", actor_color);
   label->set_size(500, 500);
   label->set_position(20, 150);
   stage->add_actor(label);
